# sphluid

./: .gitignore  Cargo.toml  README.md
sphlash/: pyproject.toml
sphlash/sphlash/: __main__.py
sphlash/tests/: test_sphlash.py
sphluid/: Cargo.toml  README.md  pyproject.toml  tags
sphluid/examples/: run.py
sphluid/sphluid/: __init__.py  init.py  io.py  snap.py
sphluid/src/: init.rs  io.rs  lib.rs  main.rs  numeric.rs  particle.rs  universe.rs
sphluid/src/universe/: evolve.rs  init.rs  io.rs  mod.rs
sphluid/tests/: netcdf_crabs.rs
