[tool.poetry]
name = "sphlash"
version = "0.1.0"
description = ""
authors = ["Alessandro Candido <candido.ale@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
xarray = "^0.19.0"
netCDF4 = "^1.5.7"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poe.tasks]
main = "python -m sphlash"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
