[package]
name = "sphluid"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
ndarray = "0.15.3"
netcdf = { version = "0.6.1", features = ["static"] }
num = "0.4.0"
rand = "0.8.4"
rayon = "1.5.1"
