[package]
name = "sphluid"
version = "0.1.0"
edition = "2021"
authors = ["Alessandro Candido <candido.ale@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/N3PDF/pineappl"
readme = "README.md"
keywords = ["physics"]
categories = ["science"]

[package.metadata.maturin]
name = "sphluid"

[lib]
name = "sphluid"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.42"
ndarray = "0.15.3"
netcdf = { version = "0.7.0", features = ["static"] }
numpy = "0.16.2"
pyo3 = { features = ["extension-module"], version = "0.16.4" }
rand = "0.8.4"
rayon = "1.5.1"
