[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "sphluid"
requires-python = ">=3.6"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
  "numpy>=1.16.0,<2.0.0",
  "xarray>=2022.6.0",
  "rich>=12.5.1,<13.0.0",
]

[project.optional-dependencies]
docs = ["sphinx", "sphinx_rtd_theme", "sphinxcontrib-bibtex", "nbsphinx"]
test = ["pytest", "pytest-cov"]

[project.urls]
homepage = "https://github.com/AleCandido/sphluid"
documentation = "https://github.com/AleCandido/sphluid"

[tool.maturin]
bindings = "pyo3"
strip = true

[tool.pytest.ini_options]
testpaths = ['tests/']
addopts = [
  '--cov=sphluid',
  '--cov-report=html',
  '--cov-report=xml',
  '--strict-markers',
]
